changed: jshint to eslint to prepare for ES6 conversion changed: jsbeautifier config to prepare for ES6 conversion

--- a/package.json
+++ b/package.json
@@ -73,8 +73,8 @@
         "chai": "4.1.x",
         "chai-as-promised": "*",
         "grunt-concurrent": "2.x.x",
-        "grunt-contrib-jshint": "1.1.x",
         "grunt-contrib-watch": "1.0.x",
+        "grunt-eslint": "^20.1.0",
         "grunt-jsbeautifier": "0.2.x",
         "grunt-karma": "2.0.x",
         "grunt-mocha-test": "0.13.x",
