--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
         "indent": [ "warn", 4, {
             "SwitchCase": 1
         } ],
+        "no-unused-vars": [ "error", { "argsIgnorePattern": "next" } ],
         "linebreak-style": [ "error", "unix" ],
         "quotes": [ "error", "single" ],
         "semi": [ "error", "always" ],
