changed: updated minor dependencies

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.61.4",
+    "version": "1.61.5",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -29,14 +29,14 @@
         "aliasify": "2.1.x",
         "basic-auth": "2.0.x",
         "body-parser": "1.x.x",
-        "bristol": "0.3.x",
+        "bristol": "0.4.x",
         "busboy": "0.2.x",
         "compression": "1.x.x",
         "cookie-parser": "1.4.x",
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "git+https://github.com/enketo/enketo-core.git#7438cf2d",
+        "enketo-core": "4.47.5",
         "enketo-transformer": "1.25.2",
         "express": "4.x.x",
         "file-saver": "1.3.x",
@@ -56,7 +56,7 @@
         "jszip": "^3.1.5",
         "jwt-simple": "0.5.x",
         "libxslt": "0.6.5",
-        "lie": "3.1.x",
+        "lie": "3.3.x",
         "load-grunt-tasks": "3.x.x",
         "lodash": "4.17.x",
         "morgan": "1.x.x",
