changed: updated dependencies

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "grunt-contrib-uglify": "3.2.x",
         "grunt-env": "0.4.x",
         "grunt-i18next": "0.2.x",
-        "grunt-sass": "2.0.x",
+        "grunt-sass": "2.1.x",
         "grunt-shell-spawn": "0.3.x",
         "i18next": "^10.4.1",
         "i18next-browser-languagedetector": "2.1.x",
@@ -61,9 +61,9 @@
         "lodash": "4.17.x",
         "morgan": "1.x.x",
         "papaparse": "4.3.x",
-        "pug": "2.0.0-beta6",
+        "pug": "2.0.3",
         "redis": "2.8.0",
-        "request": "2.83.x",
+        "request": "2.85.x",
         "serve-favicon": "2.x.x",
         "time-grunt": "1.x.x",
         "vex-js": "2.3.x",
@@ -89,9 +89,9 @@
         "karma-opera-launcher": "1.0.x",
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "1.3.x",
-        "mocha": "4.0.x",
+        "mocha": "5.0.x",
         "sinon": "^4.3.0",
-        "sinon-chai": "2.14.x",
+        "sinon-chai": "3.0.x",
         "supertest": "3.0.x"
     },
     "aliasify": {
