--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "4.47.5",
+        "enketo-core": "git+https://github.com/enketo/enketo-core.git#58a96a58",
         "enketo-transformer": "1.25.2",
         "express": "4.x.x",
         "file-saver": "1.3.x",
@@ -62,6 +62,7 @@
         "morgan": "1.x.x",
         "papaparse": "4.3.x",
         "pug": "2.0.3",
+        "puppeteer": "^1.2.0",
         "redis": "2.8.0",
         "request": "2.85.x",
         "serve-favicon": "2.x.x",
