--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.62.0",
+    "version": "1.62.1",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "git+https://github.com/enketo/enketo-core.git#d7f27e53",
+        "enketo-core": "4.48.1",
         "enketo-transformer": "1.25.2",
         "express": "4.x.x",
         "file-saver": "1.3.x",
@@ -47,8 +47,8 @@
         "grunt-i18next": "0.2.x",
         "grunt-sass": "2.1.x",
         "grunt-shell-spawn": "0.3.x",
-        "i18next": "^10.4.1",
-        "i18next-browser-languagedetector": "2.1.x",
+        "i18next": "11.1.x",
+        "i18next-browser-languagedetector": "2.2.x",
         "i18next-express-middleware": "^1.0.9",
         "i18next-node-fs-backend": "1.0.x",
         "i18next-xhr-backend": "^1.5.1",
