--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
         "file-saver": "1.3.x",
         "grunt": "^1.0.2",
         "grunt-browserify": "5.3.x",
-        "grunt-contrib-uglify": "3.2.x",
+        "grunt-contrib-uglify": "3.3.x",
         "grunt-env": "0.4.x",
         "grunt-i18next": "0.2.x",
         "grunt-sass": "2.1.x",
         "grunt-shell-spawn": "0.3.x",
-        "i18next": "11.1.x",
+        "i18next": "11.2.x",
         "i18next-browser-languagedetector": "2.2.x",
         "i18next-express-middleware": "^1.0.9",
         "i18next-node-fs-backend": "1.0.x",
@@ -60,7 +60,7 @@
         "load-grunt-tasks": "3.x.x",
         "lodash": "4.17.x",
         "morgan": "1.x.x",
-        "papaparse": "4.3.x",
+        "papaparse": "4.4.x",
         "pug": "2.0.3",
         "puppeteer": "^1.2.0",
         "redis": "2.8.0",
@@ -81,7 +81,7 @@
         "grunt-mocha-test": "0.13.x",
         "grunt-nodemon": "0.4.x",
         "gulp": "3.9.x",
-        "i18next-parser": "0.12.0",
+        "i18next-parser": "0.13.0",
         "karma": "^2.0.0",
         "karma-browserify": "^5.1.3",
         "karma-chrome-launcher": "2.2.x",
@@ -90,8 +90,8 @@
         "karma-opera-launcher": "1.0.x",
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "1.3.x",
-        "mocha": "5.0.x",
-        "sinon": "^4.3.0",
+        "mocha": "5.1.x",
+        "sinon": "5.0.x",
         "sinon-chai": "3.0.x",
         "supertest": "3.0.x"
     },
