--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "4.51.6",
-        "enketo-transformer": "1.25.2",
+        "enketo-core": "git+https://github.com/enketo/enketo-core.git#b4e747de",
+        "enketo-transformer": "1.26.0",
         "express": "4.x.x",
         "file-saver": "1.3.x",
         "grunt": "^1.0.2",
