added: support for range widget (basic),
closes https://github.com/kobotoolbox/enketo-express/issues/1034

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -27,7 +27,7 @@
     "widgets": [
         "note", "select-desktop", "select-mobile", "autocomplete", "geo", "textarea",
         "table", "radio", "date", "time", "datetime", "compact", "file", "draw",
-        "likert", "distress", "horizontal", "image-view", "comment", "image-map", "date-native", "date-mobile"
+        "likert", "range", "horizontal", "image-view", "comment", "image-map", "date-native", "date-mobile"
     ],
     "analytics": "google",
     "google": {
