--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.65.5",
+    "version": "1.66.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -36,8 +36,8 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "git+https://github.com/enketo/enketo-core.git#16fa19d3",
-        "enketo-transformer": "1.26.0",
+        "enketo-core": "4.52.0",
+        "enketo-transformer": "1.27.0",
         "express": "4.x.x",
         "file-saver": "1.3.x",
         "grunt": "^1.0.2",
