--- a/config/default-config.json
+++ b/config/default-config.json
@@ -26,7 +26,7 @@
     },
     "widgets": [
         "note", "select-desktop", "select-mobile", "autocomplete", "geo", "textarea",
-        "table", "radio", "date", "time", "datetime", "compact", "file", "draw",
+        "table", "radio", "date", "time", "datetime", "compact", "file", "draw", "rank",
         "likert", "range", "horizontal", "image-view", "comment", "image-map", "date-native", "date-mobile"
     ],
     "analytics": "google",
