added: URL widget fixed: issue with compact group and draw widget, closes https://github.com/kobotoolbox/enketo-express/issues/1055 fixed: styling issues with geopoint widget, closes https://github.com/kobotoolbox/enketo-express/issues/1056

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -25,7 +25,7 @@
         "email": "support@kobotoolbox.org"
     },
     "widgets": [
-        "note", "select-desktop", "select-mobile", "autocomplete", "geo", "textarea",
+        "note", "select-desktop", "select-mobile", "autocomplete", "geo", "textarea", "url",
         "table", "radio", "date", "time", "datetime", "compact", "file", "draw", "rank",
         "likert", "range", "horizontal", "image-view", "comment", "image-map", "date-native", "date-mobile"
     ],
