changed: moved Promise polyfill to IE11 polyfill file, https://github.com/kobotoolbox/enketo-express/issues/1054

--- a/public/.eslintrc.json
+++ b/public/.eslintrc.json
@@ -5,6 +5,9 @@
         "node": false,
         "commonjs": true
     },
+    "globals": {
+        "Promise": true
+    },
     "extends": "eslint:recommended",
     "parserOptions": {
         "sourceType": "module",
