--- a/package.json
+++ b/package.json
@@ -40,30 +40,31 @@
         "enketo-transformer": "1.28.0",
         "express": "4.x.x",
         "file-saver": "1.3.x",
-        "grunt": "^1.0.2",
+        "grunt": "^1.0.3",
         "grunt-browserify": "5.3.x",
         "grunt-contrib-uglify": "3.3.x",
         "grunt-env": "0.4.x",
         "grunt-i18next": "0.2.x",
-        "grunt-sass": "2.1.x",
+        "grunt-sass": "3.0.x",
         "grunt-shell-spawn": "0.3.x",
-        "i18next": "11.2.x",
+        "i18next": "11.3.x",
         "i18next-browser-languagedetector": "2.2.x",
         "i18next-express-middleware": "^1.0.9",
-        "i18next-node-fs-backend": "1.0.x",
+        "i18next-node-fs-backend": "1.2.x",
         "i18next-xhr-backend": "^1.5.1",
         "jquery": "3.3.x",
         "jszip": "^3.1.5",
         "jwt-simple": "0.5.x",
         "libxslt": "0.6.5",
-        "load-grunt-tasks": "3.x.x",
+        "load-grunt-tasks": "4.x.x",
         "lodash": "4.17.x",
         "morgan": "1.x.x",
-        "papaparse": "4.4.x",
+        "node-sass": "^4.9.2",
+        "papaparse": "4.5.x",
         "pug": "2.0.3",
         "puppeteer": "^1.2.0",
         "redis": "2.8.0",
-        "request": "2.85.x",
+        "request": "2.87.x",
         "serve-favicon": "2.x.x",
         "time-grunt": "1.x.x",
         "vex-dialog-enketo": "git+https://github.com/enketo/vex-dialog.git#b6e0f01",
@@ -74,26 +75,26 @@
         "chai": "4.1.x",
         "chai-as-promised": "*",
         "grunt-concurrent": "2.x.x",
-        "grunt-contrib-watch": "1.0.x",
-        "grunt-eslint": "^20.1.0",
+        "grunt-contrib-watch": "1.1.x",
+        "grunt-eslint": "^21.0.0",
         "grunt-jsbeautifier": "0.2.x",
         "grunt-karma": "2.0.x",
         "grunt-mocha-test": "0.13.x",
         "grunt-nodemon": "0.4.x",
         "gulp": "3.9.x",
         "i18next-parser": "0.13.0",
-        "karma": "^2.0.0",
-        "karma-browserify": "^5.1.3",
+        "karma": "^2.0.4",
+        "karma-browserify": "^5.3.0",
         "karma-chrome-launcher": "2.2.x",
         "karma-firefox-launcher": "1.1.x",
         "karma-mocha": "1.3.x",
         "karma-opera-launcher": "1.0.x",
         "karma-safari-launcher": "1.0.x",
-        "karma-sinon-chai": "1.3.x",
-        "mocha": "5.1.x",
-        "sinon": "5.0.x",
-        "sinon-chai": "3.0.x",
-        "supertest": "3.0.x"
+        "karma-sinon-chai": "2.0.x",
+        "mocha": "5.2.x",
+        "sinon": "6.1.x",
+        "sinon-chai": "3.2.x",
+        "supertest": "3.1.x"
     },
     "aliasify": {
         "aliases": {
