--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "git+https://github.com/enketo/enketo-core.git#fc2f231b",
-        "enketo-transformer": "1.28.0",
+        "enketo-core": "4.55.0",
+        "enketo-transformer": "1.28.2",
         "express": "4.x.x",
         "file-saver": "1.3.x",
         "grunt": "^1.0.3",
