changed: simplified installation and re-organized setup files

--- a/setup/redis/conf/redis-enketo-cache.conf
+++ b/setup/redis/conf/redis-enketo-cache.conf
@@ -2,9 +2,9 @@
 
 supervised systemd
 
-daemonize no
+daemonize yes
 
-pidfile /var/run/redis/redis-enketo-cache.pid
+pidfile /var/run/redis-enketo-cache/redis-server.pid
 
 port 6380
 
