--- a/setup/redis/conf/redis-enketo-main.conf
+++ b/setup/redis/conf/redis-enketo-main.conf
@@ -2,9 +2,9 @@
 
 supervised systemd
 
-daemonize no
+daemonize yes
 
-pidfile /var/run/redis/redis-enketo-main.pid
+pidfile /var/run/redis-enketo-main/redis-server.pid
 
 port 6379
 
