fixed: form previews using the `form` query parameter with a URL value that contains ":" in the path, get stuck in an infinite loop,
closes https://github.com/kobotoolbox/enketo-express/issues/1087

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "request": "2.87.x",
         "serve-favicon": "2.x.x",
         "time-grunt": "1.x.x",
+        "valid-url": "^1.0.9",
         "vex-dialog-enketo": "git+https://github.com/enketo/vex-dialog.git#b6e0f01",
         "vex-js": "4.1.x",
         "xml2js": "0.4.x"
