--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.69.2",
+    "version": "1.70.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "4.56.0",
+        "enketo-core": "4.57.0",
         "enketo-transformer": "1.28.3",
         "express": "4.x.x",
         "file-saver": "1.3.x",
@@ -84,7 +84,7 @@
         "grunt-nodemon": "0.4.x",
         "gulp": "3.9.x",
         "i18next-parser": "0.13.0",
-        "karma": "^2.0.4",
+        "karma": "3.0.x",
         "karma-browserify": "^5.3.0",
         "karma-chrome-launcher": "2.2.x",
         "karma-firefox-launcher": "1.1.x",
