changed: improved performance of modern browser (at the expense of Internet Explorer 11 performance) by not loading polyfills unnecessarily,
closes https://github.com/kobotoolbox/enketo-express/issues/1054

--- a/package.json
+++ b/package.json
@@ -103,7 +103,8 @@
             "enketo/widgets": "./public/js/widgets",
             "enketo/translator": "./public/js/src/module/translator",
             "enketo/dialog": "./public/js/src/module/gui",
-            "enketo/file-manager": "./public/js/src/module/file-manager"
+            "enketo/file-manager": "./public/js/src/module/file-manager",
+            "enketo/polyfills-ie11": false
         }
     }
 }
