--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.70.2",
+    "version": "1.70.3",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "git+https://github.com/enketo/enketo-core.git#0fd868fa",
+        "enketo-core": "4.58.0",
         "enketo-transformer": "1.28.4",
         "express": "4.x.x",
         "file-saver": "1.3.x",
@@ -103,8 +103,7 @@
             "enketo/widgets": "./public/js/widgets",
             "enketo/translator": "./public/js/src/module/translator",
             "enketo/dialog": "./public/js/src/module/gui",
-            "enketo/file-manager": "./public/js/src/module/file-manager",
-            "enketo/polyfills-ie11": false
+            "enketo/file-manager": "./public/js/src/module/file-manager"
         }
     }
 }
