--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "4.58.0",
+        "enketo-core": "github:enketo/enketo-core#d1a1e0aa",
         "enketo-transformer": "1.28.4",
         "express": "4.x.x",
         "file-saver": "1.3.x",
