--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
         "file-saver": "1.3.x",
         "grunt": "^1.0.3",
         "grunt-browserify": "5.3.x",
-        "grunt-contrib-uglify": "3.4.x",
+        "grunt-contrib-uglify-es": "^3.3.0",
         "grunt-env": "0.4.x",
         "grunt-i18next": "0.2.x",
         "grunt-sass": "3.0.x",
