changed: locales build task now cleans up built files,
closes https://github.com/OpenClinica/enketo-express-oc/issues/46

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,21 @@
-*.sublime-project
-*.sublime-workspace
-node_modules
-public/js/*.min.js
-public/js/*-bundle.js
-public/js/widgets.js
-public/css/*.css
-public/lib/enketo-core
-public/lib/bower-components
-app/views/styles/component/_widgets.scss
-locales/*/translation-combined.json
-config/config.json
 .rebooted
 .vagrant
 .scratchpad
 .nodemon-*
 .DS_Store
 .env
+*.sublime-project
+*.sublime-workspace
+*.diff
+node_modules
+public/js/*.min.js
+public/js/*-bundle.js
+public/js/widgets.js
+public/css/*.css
+*/build/*
+translation_old.json
+app/views/styles/component/_widgets.scss
+config/config.json
 enketo-main.rdb
 setup/docker/secrets/*
 setup/docker/redis_main_data/*
