--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.70.3",
+    "version": "1.71.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -36,8 +36,8 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "github:enketo/enketo-core#7488cdb6",
-        "enketo-transformer": "1.29.0",
+        "enketo-core": "4.59.0",
+        "enketo-transformer": "1.30.0",
         "express": "4.x.x",
         "file-saver": "1.3.x",
         "grunt": "^1.0.3",
