--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "4.59.0",
+        "enketo-core": "github:enketo/enketo-core#6741402d",
         "enketo-transformer": "1.30.0",
         "express": "4.x.x",
         "grunt": "^1.0.3",
@@ -67,7 +67,7 @@
         "serve-favicon": "2.x.x",
         "time-grunt": "1.x.x",
         "valid-url": "^1.0.9",
-        "vex-dialog-enketo": "git+https://github.com/enketo/vex-dialog.git#b6e0f01",
+        "vex-dialog-enketo": "github:enketo/vex-dialog.git#b6e0f01",
         "vex-js": "4.1.x",
         "xml2js": "0.4.x"
     },
