--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.71.1",
+    "version": "1.72.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -58,6 +58,7 @@
         "load-grunt-tasks": "4.x.x",
         "lodash": "4.17.x",
         "morgan": "1.x.x",
+        "node-forge": "^0.7.6",
         "node-sass": "^4.9.2",
         "papaparse": "4.6.x",
         "pug": "2.0.3",
