--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.71.0",
+    "version": "1.71.1",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "github:enketo/enketo-core#797af785",
+        "enketo-core": "4.60.0",
         "enketo-transformer": "1.30.0",
         "express": "4.x.x",
         "grunt": "^1.0.3",
