fixed: autocomplete widget not updating when form language is changed, https://github.com/kobotoolbox/enketo-express/issues/1124

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.1.x",
-        "enketo-core": "4.60.4",
+        "enketo-core": "github:enketo/enketo-core.git#a2aed4a3",
         "enketo-transformer": "1.30.0",
         "express": "4.x.x",
         "grunt": "^1.0.3",
