--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.72.2",
+    "version": "1.72.3",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -35,8 +35,8 @@
         "cookie-parser": "1.4.x",
         "csurf": "1.9.x",
         "db.js": "0.15.0",
-        "debug": "3.1.x",
-        "enketo-core": "github:enketo/enketo-core.git#5ceb0592",
+        "debug": "3.2.x",
+        "enketo-core": "4.60.6",
         "enketo-transformer": "1.30.0",
         "express": "4.x.x",
         "grunt": "^1.0.3",
@@ -46,10 +46,10 @@
         "grunt-i18next": "0.2.x",
         "grunt-sass": "3.0.x",
         "grunt-shell-spawn": "0.3.x",
-        "i18next": "11.6.x",
+        "i18next": "12.0.x",
         "i18next-browser-languagedetector": "2.2.x",
         "i18next-express-middleware": "^1.0.9",
-        "i18next-node-fs-backend": "1.2.x",
+        "i18next-node-fs-backend": "2.1.x",
         "i18next-xhr-backend": "^1.5.1",
         "jquery": "3.3.x",
         "jszip": "^3.1.5",
@@ -73,18 +73,18 @@
         "xml2js": "0.4.x"
     },
     "devDependencies": {
-        "chai": "4.1.x",
+        "chai": "4.2.x",
         "chai-as-promised": "*",
         "grunt-concurrent": "2.x.x",
         "grunt-contrib-watch": "1.1.x",
         "grunt-eslint": "^21.0.0",
         "grunt-jsbeautifier": "0.2.x",
-        "grunt-karma": "2.0.x",
+        "grunt-karma": "3.0.x",
         "grunt-mocha-test": "0.13.x",
         "grunt-nodemon": "0.4.x",
         "gulp": "3.9.x",
         "i18next-parser": "0.13.0",
-        "karma": "3.0.x",
+        "karma": "3.1.x",
         "karma-browserify": "^5.3.0",
         "karma-chrome-launcher": "2.2.x",
         "karma-firefox-launcher": "1.1.x",
@@ -93,9 +93,9 @@
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "2.0.x",
         "mocha": "5.2.x",
-        "sinon": "6.1.x",
+        "sinon": "7.1.x",
         "sinon-chai": "3.2.x",
-        "supertest": "3.1.x"
+        "supertest": "3.3.x"
     },
     "aliasify": {
         "aliases": {
