--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.72.3",
+    "version": "1.73.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -70,6 +70,7 @@
         "redis": "2.8.0",
         "request": "2.88.x",
         "rollup": "^0.66.6",
+        "rollup-plugin-alias": "^1.4.0",
         "rollup-plugin-commonjs": "^9.2.0",
         "rollup-plugin-json": "^3.1.0",
         "rollup-plugin-node-builtins": "^2.1.2",
@@ -113,5 +114,11 @@
         "enketo/translator": "./public/js/src/module/translator",
         "enketo/dialog": "./public/js/src/module/gui",
         "enketo/file-manager": "./public/js/src/module/file-manager"
-    }
+    },
+    "entries": [
+        "public/js/src/enketo-webform.js",
+        "public/js/src/enketo-webform-edit.js",
+        "public/js/src/enketo-webform-view.js",
+        "public/js/src/enketo-offline-fallback.js"
+    ]
 }
