--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.73.0",
+    "version": "1.74.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -41,8 +41,8 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.2.x",
-        "enketo-core": "5.0.0-alpha.2",
-        "enketo-transformer": "1.30.0",
+        "enketo-core": "5.0.0",
+        "enketo-transformer": "1.30.1",
         "express": "4.x.x",
         "grunt": "^1.0.3",
         "grunt-contrib-uglify-es": "^3.3.0",
