--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.74.0",
+    "version": "1.74.1",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -45,11 +45,11 @@
         "enketo-transformer": "1.30.1",
         "express": "4.x.x",
         "grunt": "^1.0.3",
-        "grunt-contrib-uglify-es": "^3.3.0",
         "grunt-env": "0.4.x",
         "grunt-i18next": "0.2.x",
         "grunt-sass": "3.0.x",
         "grunt-shell-spawn": "0.3.x",
+        "grunt-terser": "^0.1.0",
         "i18next": "12.0.x",
         "i18next-browser-languagedetector": "2.2.x",
         "i18next-express-middleware": "^1.0.9",
