--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.74.2",
+    "version": "1.74.3",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -41,7 +41,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.2.x",
-        "enketo-core": "github:enketo/enketo-core.git#f307d012",
+        "enketo-core": "5.0.4",
         "enketo-transformer": "1.30.1",
         "express": "4.x.x",
         "grunt": "^1.0.3",
