--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "3.2.x",
-        "enketo-core": "5.0.5",
+        "enketo-core": "github:enketo/enketo-core.git#0855f961",
         "enketo-transformer": "1.30.1",
         "express": "4.x.x",
         "grunt": "^1.0.3",
