--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
         "basic-auth": "2.0.x",
         "body-parser": "1.x.x",
         "bristol": "0.4.x",
-        "busboy": "0.2.x",
+        "busboy": "0.3.x",
         "compression": "1.x.x",
         "cookie-parser": "1.4.x",
         "csurf": "1.9.x",
         "db.js": "0.15.0",
-        "debug": "3.2.x",
+        "debug": "4.1.x",
         "enketo-core": "github:enketo/enketo-core.git#0855f961",
         "enketo-transformer": "1.30.1",
         "express": "4.x.x",
@@ -48,13 +48,13 @@
         "grunt-env": "0.4.x",
         "grunt-i18next": "0.2.x",
         "grunt-sass": "3.0.x",
-        "grunt-shell-spawn": "0.3.x",
+        "grunt-shell-spawn": "0.4.x",
         "grunt-terser": "^0.1.0",
-        "i18next": "12.0.x",
-        "i18next-browser-languagedetector": "2.2.x",
+        "i18next": "15.0.x",
+        "i18next-browser-languagedetector": "3.0.x",
         "i18next-express-middleware": "^1.0.9",
         "i18next-node-fs-backend": "2.1.x",
-        "i18next-xhr-backend": "^1.5.1",
+        "i18next-xhr-backend": "2.0.x",
         "jquery": "3.3.x",
         "jszip": "^3.1.5",
         "jwt-simple": "0.5.x",
@@ -77,7 +77,7 @@
         "rollup-plugin-node-globals": "^1.4.0",
         "rollup-plugin-node-resolve": "^3.4.0",
         "serve-favicon": "2.x.x",
-        "time-grunt": "1.x.x",
+        "time-grunt": "2.x.x",
         "valid-url": "^1.0.9",
         "vex-dialog-enketo": "github:enketo/vex-dialog.git#b6e0f01",
         "vex-js": "4.1.x",
@@ -93,7 +93,7 @@
         "grunt-karma": "3.0.x",
         "grunt-mocha-test": "0.13.x",
         "grunt-nodemon": "0.4.x",
-        "gulp": "3.9.x",
+        "gulp": "4.0.x",
         "i18next-parser": "0.13.0",
         "karma": "3.1.x",
         "karma-chrome-launcher": "2.2.x",
@@ -104,9 +104,9 @@
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "2.0.x",
         "mocha": "5.2.x",
-        "sinon": "7.1.x",
-        "sinon-chai": "3.2.x",
-        "supertest": "3.3.x"
+        "sinon": "7.2.x",
+        "sinon-chai": "3.3.x",
+        "supertest": "3.4.x"
     },
     "browser": {
         "enketo/config": "./public/js/build/client-config",
