--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "csurf": "1.9.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "5.1.3",
+        "enketo-core": "github:enketo/enketo-core.git#9f2afed3",
         "enketo-transformer": "1.30.1",
         "express": "4.x.x",
         "grunt": "^1.0.3",
