fixed: draw widgets loose drawing (or last stroke(s) in drawing) on mobile devices if clicking hide-full-screen button or switching device orientation within 1.5 sec after last change, changed: updated dependencies

--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
         "busboy": "0.3.x",
         "compression": "1.x.x",
         "cookie-parser": "1.4.x",
-        "csurf": "1.9.x",
+        "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "5.2.4",
+        "enketo-core": "5.2.6",
         "enketo-transformer": "1.30.1",
         "express": "4.x.x",
         "grunt": "^1.0.3",
@@ -50,7 +50,7 @@
         "grunt-sass": "3.0.x",
         "grunt-shell-spawn": "0.4.x",
         "grunt-terser": "^0.1.0",
-        "i18next": "15.0.x",
+        "i18next": "15.1.x",
         "i18next-browser-languagedetector": "3.0.x",
         "i18next-express-middleware": "^1.0.9",
         "i18next-node-fs-backend": "2.1.x",
@@ -69,13 +69,13 @@
         "puppeteer": "^1.2.0",
         "redis": "2.8.0",
         "request": "2.88.x",
-        "rollup": "^0.66.6",
+        "rollup": "1.10.x",
         "rollup-plugin-alias": "^1.4.0",
         "rollup-plugin-commonjs": "^9.2.0",
-        "rollup-plugin-json": "^3.1.0",
+        "rollup-plugin-json": "4.x.x",
         "rollup-plugin-node-builtins": "^2.1.2",
         "rollup-plugin-node-globals": "^1.4.0",
-        "rollup-plugin-node-resolve": "^3.4.0",
+        "rollup-plugin-node-resolve": "4.x.x",
         "serve-favicon": "2.x.x",
         "time-grunt": "2.x.x",
         "valid-url": "^1.0.9",
@@ -95,18 +95,18 @@
         "grunt-nodemon": "0.4.x",
         "gulp": "4.0.x",
         "i18next-parser": "0.13.0",
-        "karma": "3.1.x",
+        "karma": "4.1.x",
         "karma-chrome-launcher": "2.2.x",
         "karma-firefox-launcher": "1.1.x",
         "karma-mocha": "1.3.x",
         "karma-opera-launcher": "1.0.x",
-        "karma-rollup-preprocessor": "^6.1.0",
+        "karma-rollup-preprocessor": "7.x.x",
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "2.0.x",
-        "mocha": "5.2.x",
-        "sinon": "7.2.x",
+        "mocha": "6.1.x",
+        "sinon": "7.3.x",
         "sinon-chai": "3.3.x",
-        "supertest": "3.4.x"
+        "supertest": "4.0.xs"
     },
     "browser": {
         "enketo/config": "./public/js/build/client-config",
