--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
         "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "5.2.8",
-        "enketo-transformer": "1.30.1",
+        "enketo-core": "github:enketo/enketo-core#9add8bea",
+        "enketo-transformer": "1.31.0",
         "express": "4.x.x",
         "grunt": "^1.0.3",
         "grunt-env": "0.4.x",
