--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "github:enketo/enketo-core#865904b1",
+        "enketo-core": "5.4.1",
         "enketo-transformer": "1.31.1",
         "express": "4.x.x",
         "grunt": "^1.0.3",
