changed: updated enketo-core and other dependencies with fixed: iOS readonly datepicker still active! https://github.com/OpenClinica/enketo-express-oc/issues/219 changed: print style improvements of select minimal widget

--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
         "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "github:enketo/enketo-core#d4012068",
-        "enketo-transformer": "1.31.1",
+        "enketo-core": "github:enketo/enketo-core#a19d5212",
+        "enketo-transformer": "1.32.0",
         "express": "4.x.x",
         "grunt": "^1.0.3",
         "grunt-env": "0.4.x",
@@ -50,32 +50,32 @@
         "grunt-sass": "3.0.x",
         "grunt-shell-spawn": "0.4.x",
         "grunt-terser": "^0.1.0",
-        "i18next": "15.1.x",
+        "i18next": "17.0.x",
         "i18next-browser-languagedetector": "3.0.x",
         "i18next-express-middleware": "^1.0.9",
         "i18next-node-fs-backend": "2.1.x",
-        "i18next-xhr-backend": "2.0.x",
+        "i18next-xhr-backend": "3.0.x",
         "jquery": "3.3.x",
         "jszip": "^3.1.5",
         "jwt-simple": "0.5.x",
         "libxslt": "0.6.5",
-        "load-grunt-tasks": "4.x.x",
+        "load-grunt-tasks": "5.x.x",
         "lodash": "4.17.x",
         "morgan": "1.x.x",
         "node-forge": "^0.7.6",
         "node-sass": "^4.9.2",
         "papaparse": "4.6.x",
-        "pug": "2.0.3",
+        "pug": "2.0.4",
         "puppeteer": "^1.2.0",
         "redis": "2.8.0",
         "request": "2.88.x",
-        "rollup": "1.10.x",
+        "rollup": "1.16.x",
         "rollup-plugin-alias": "^1.4.0",
-        "rollup-plugin-commonjs": "^9.2.0",
+        "rollup-plugin-commonjs": "10.0.x",
         "rollup-plugin-json": "4.x.x",
         "rollup-plugin-node-builtins": "^2.1.2",
         "rollup-plugin-node-globals": "^1.4.0",
-        "rollup-plugin-node-resolve": "4.x.x",
+        "rollup-plugin-node-resolve": "5.2.x",
         "serve-favicon": "2.x.x",
         "time-grunt": "2.x.x",
         "valid-url": "^1.0.9",
@@ -86,9 +86,9 @@
     "devDependencies": {
         "chai": "4.2.x",
         "chai-as-promised": "*",
-        "grunt-concurrent": "2.x.x",
+        "grunt-concurrent": "3.x.x",
         "grunt-contrib-watch": "1.1.x",
-        "grunt-eslint": "^21.0.0",
+        "grunt-eslint": "22.x.x",
         "grunt-jsbeautifier": "0.2.x",
         "grunt-karma": "3.0.x",
         "grunt-mocha-test": "0.13.x",
