--- a/config/default-config.json
+++ b/config/default-config.json
@@ -27,7 +27,7 @@
     "widgets": [
         "note", "select-desktop", "select-mobile", "autocomplete", "geo", "textarea", "url",
         "table", "radio", "date", "time", "datetime", "select-media", "file", "draw", "rank",
-        "likert", "range", "columns", "image-view", "comment", "image-map", "date-native",
+        "likert", "range", "columns", "image-view", "comment", "image-map", "date-native", "date-native-ios",
         "date-mobile", "text-max"
     ],
     "analytics": "google",
