added: make record cache expiry time configurable

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -13,6 +13,7 @@
         }
     },
     "timeout": 300000,
+    "timeout for record cache": 30000,
     "encryption key": "s0m3v3rys3cr3tk3y",
     "less secure encryption key": "this $3cr3t key is crackable",
     "default theme": "kobo",
