--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "5.5.1",
+        "enketo-core": "github:enketo/enketo-core#934b18fa",
         "enketo-transformer": "1.32.0",
         "express": "4.x.x",
         "grunt": "^1.0.3",
