--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,19 @@
         "node": true
     },
     "extends": "eslint:recommended",
+    "plugins": [
+        "jsdoc"
+    ],
     "parserOptions": {
         "sourceType": "module",
         "ecmaVersion": 6
+    },
+    "settings": {
+        "jsdoc": {
+            "tagNamePreference": {
+                "returns": "return"
+            }
+        }
     },
     "rules": {
         "indent": [ "warn", 4, {
@@ -17,6 +27,24 @@
         "linebreak-style": [ "error", "unix" ],
         "quotes": [ "error", "single" ],
         "semi": [ "error", "always" ],
-        "no-console": 0
+        "no-console": 0,
+        "jsdoc/check-examples": 1,
+        "jsdoc/check-param-names": 1,
+        "jsdoc/check-tag-names": 1,
+        "jsdoc/check-types": 1,
+        "jsdoc/newline-after-description": [ "warn", "always"],
+        "jsdoc/no-undefined-types": 1,
+        "jsdoc/require-description": 0,
+        "jsdoc/require-description-complete-sentence": 0,
+        "jsdoc/require-example": 0,
+        "jsdoc/require-hyphen-before-param-description": 1,
+        "jsdoc/require-param": 1,
+        "jsdoc/require-param-description": 1,
+        "jsdoc/require-param-name": 1,
+        "jsdoc/require-param-type": 1,
+        "jsdoc/require-returns-check": 1,
+        "jsdoc/require-returns-description": 1,
+        "jsdoc/require-returns-type": 1,
+        "jsdoc/valid-types": 1
     }
 }
