remove publis-please related things

--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
         "test": "grunt test",
         "postinstall": "grunt",
         "beautify": "grunt jsbeautifier:fix",
-        "build-docs": "./node_modules/.bin/jsdoc -c jsdoc.config.js",
-        "publish-please-pre-script": "npm run test && npm run beautify && npm run build-docs",
-        "publish-please": "publish-please",
-        "prepublishOnly": "publish-please guard"
+        "build-docs": "./node_modules/.bin/jsdoc -c jsdoc.config.js"
     },
     "private": true,
     "license": "Apache-2.0",
@@ -112,7 +109,6 @@
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "2.0.x",
         "mocha": "6.1.x",
-        "publish-please": "^5.5.1",
         "sinon": "7.3.x",
         "sinon-chai": "3.3.x",
         "supertest": "4.0.x"
