--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "5.5.2",
+        "enketo-core": "github:enketo/enketo-core#be84e9d3",
         "enketo-transformer": "1.33.0",
         "express": "4.x.x",
         "grunt": "^1.0.3",
