1a test coverage measure (#112)
* initial changes for covarege

* merge conflicts leftovers

* whitespace fix

* don't beautify test-coverage files

* add nyc for mocha tests coverage

* generate coverage badge in readme from two sources

* remove unused variable

* use nyc:cover grunt task in test

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ setup/docker/secrets/*
 setup/docker/redis_main_data/*
 logs/submissions*
 logs/logrotate
+.nyc_output
+test-coverage
+coverage.shield.badge.md
