--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "rollup": "1.16.x",
         "rollup-plugin-alias": "^1.4.0",
         "rollup-plugin-commonjs": "10.0.x",
+        "rollup-plugin-istanbul": "^2.0.1",
         "rollup-plugin-json": "4.x.x",
         "rollup-plugin-node-builtins": "^2.1.2",
         "rollup-plugin-node-globals": "^1.4.0",
@@ -97,11 +98,15 @@
         "grunt-karma": "3.0.x",
         "grunt-mocha-test": "0.13.x",
         "grunt-nodemon": "0.4.x",
+        "grunt-simple-nyc": "^3.0.0",
         "gulp": "4.0.x",
         "i18next-parser": "0.13.0",
+        "istanbul": "^0.4.5",
+        "istanbul-reporter-shield-badge": "^1.2.0",
         "jsdoc": "^3.6.3",
         "karma": "4.1.x",
         "karma-chrome-launcher": "2.2.x",
+        "karma-coverage": "^1.1.2",
         "karma-firefox-launcher": "1.1.x",
         "karma-mocha": "1.3.x",
         "karma-opera-launcher": "1.0.x",
