changed: updated dependencies

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.77.1",
+    "version": "1.78.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -40,23 +40,24 @@
         "busboy": "0.3.x",
         "compression": "1.x.x",
         "cookie-parser": "1.4.x",
+        "core-js": "^3.2.1",
         "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "github:enketo/enketo-core#be84e9d3",
+        "enketo-core": "5.6.0",
         "enketo-transformer": "1.33.0",
         "express": "4.x.x",
         "grunt": "^1.0.3",
-        "grunt-env": "0.4.x",
+        "grunt-env": "1.0.x",
         "grunt-i18next": "0.2.x",
-        "grunt-sass": "3.0.x",
+        "grunt-sass": "3.1.x",
         "grunt-shell-spawn": "0.4.x",
         "grunt-terser": "^0.1.0",
         "i18next": "17.0.x",
         "i18next-browser-languagedetector": "3.0.x",
         "i18next-express-middleware": "^1.0.9",
         "i18next-node-fs-backend": "2.1.x",
-        "i18next-xhr-backend": "3.0.x",
+        "i18next-xhr-backend": "3.1.x",
         "jquery": "3.3.x",
         "jszip": "^3.1.5",
         "jwt-simple": "0.5.x",
@@ -71,7 +72,7 @@
         "puppeteer": "^1.2.0",
         "redis": "2.8.0",
         "request": "2.88.x",
-        "rollup": "1.16.x",
+        "rollup": "1.19.x",
         "rollup-plugin-alias": "^1.4.0",
         "rollup-plugin-commonjs": "10.0.x",
         "rollup-plugin-istanbul": "^2.0.1",
@@ -104,18 +105,18 @@
         "istanbul": "^0.4.5",
         "istanbul-reporter-shield-badge": "^1.2.0",
         "jsdoc": "^3.6.3",
-        "karma": "4.1.x",
-        "karma-chrome-launcher": "2.2.x",
+        "karma": "4.2.x",
+        "karma-chrome-launcher": "3.1.x",
         "karma-coverage": "^1.1.2",
-        "karma-firefox-launcher": "1.1.x",
+        "karma-firefox-launcher": "1.2.x",
         "karma-mocha": "1.3.x",
         "karma-opera-launcher": "1.0.x",
         "karma-rollup-preprocessor": "7.x.x",
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "2.0.x",
-        "mocha": "6.1.x",
+        "mocha": "6.2.x",
         "rimraf": "^3.0.0",
-        "sinon": "7.3.x",
+        "sinon": "7.4.x",
         "sinon-chai": "3.3.x",
         "supertest": "4.0.x"
     },
