--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "5.7.1",
+        "enketo-core": "5.7.2",
         "enketo-transformer": "1.34.0",
         "express": "4.x.x",
         "grunt": "^1.0.3",
@@ -58,12 +58,12 @@
         "i18next-express-middleware": "^1.0.9",
         "i18next-node-fs-backend": "2.1.x",
         "i18next-xhr-backend": "3.1.x",
-        "jquery": "3.3.x",
+        "jquery": "^3.4.1",
         "jszip": "^3.1.5",
         "jwt-simple": "0.5.x",
         "libxslt": "0.6.5",
         "load-grunt-tasks": "5.x.x",
-        "lodash": "4.17.x",
+        "lodash": "^4.17.15",
         "morgan": "1.x.x",
         "node-forge": "^0.7.6",
         "node-sass": "^4.9.2",
@@ -73,7 +73,7 @@
         "redis": "2.8.0",
         "request": "2.88.x",
         "rollup": "1.19.x",
-        "rollup-plugin-alias": "^1.4.0",
+        "rollup-plugin-alias": "2.0.0",
         "rollup-plugin-commonjs": "10.0.x",
         "rollup-plugin-istanbul": "^2.0.1",
         "rollup-plugin-json": "4.x.x",
@@ -105,7 +105,7 @@
         "istanbul": "^0.4.5",
         "istanbul-reporter-shield-badge": "^1.2.0",
         "jsdoc": "^3.6.3",
-        "karma": "4.2.x",
+        "karma": "4.3.x",
         "karma-chrome-launcher": "3.1.x",
         "karma-coverage": "^1.1.2",
         "karma-firefox-launcher": "1.2.x",
