changed: version and dependencies

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.79.0",
+    "version": "1.80.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -44,7 +44,7 @@
         "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "github:enketo/enketo-core#cb4df99c",
+        "enketo-core": "5.8.0",
         "enketo-transformer": "1.34.0",
         "express": "4.x.x",
         "grunt": "^1.0.3",
@@ -54,10 +54,10 @@
         "grunt-shell-spawn": "0.4.x",
         "grunt-terser": "^0.1.0",
         "i18next": "17.0.x",
-        "i18next-browser-languagedetector": "3.0.x",
+        "i18next-browser-languagedetector": "3.1.x",
         "i18next-express-middleware": "^1.0.9",
         "i18next-node-fs-backend": "2.1.x",
-        "i18next-xhr-backend": "3.1.x",
+        "i18next-xhr-backend": "3.2.x",
         "jquery": "^3.4.1",
         "jstransformer-markdown-it": "^2.1.0",
         "jszip": "^3.1.5",
@@ -73,8 +73,8 @@
         "puppeteer": "^1.2.0",
         "redis": "2.8.0",
         "request": "2.88.x",
-        "rollup": "1.21.x",
-        "rollup-plugin-alias": "2.0.0",
+        "rollup": "1.23.x",
+        "rollup-plugin-alias": "2.0.1",
         "rollup-plugin-commonjs": "10.1.x",
         "rollup-plugin-istanbul": "^2.0.1",
         "rollup-plugin-json": "4.x.x",
@@ -118,7 +118,7 @@
         "mocha": "6.2.x",
         "nock": "^11.3.4",
         "rimraf": "^3.0.0",
-        "sinon": "7.4.x",
+        "sinon": "7.5.x",
         "sinon-chai": "3.3.x",
         "supertest": "4.0.x"
     },
