changed: updated minor dependencies

--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
         "grunt-i18next": "0.2.x",
         "grunt-sass": "3.1.x",
         "grunt-shell-spawn": "0.4.x",
-        "grunt-terser": "^0.1.0",
-        "i18next": "17.2.x",
+        "grunt-terser": "1.0.x",
+        "i18next": "17.3.x",
         "i18next-browser-languagedetector": "4.0.x",
         "i18next-express-middleware": "^1.0.9",
         "i18next-node-fs-backend": "2.1.x",
@@ -73,8 +73,8 @@
         "puppeteer": "^1.2.0",
         "redis": "2.8.0",
         "request": "2.88.x",
-        "rollup": "1.24.x",
-        "rollup-plugin-alias": "2.0.1",
+        "rollup": "1.25.x",
+        "rollup-plugin-alias": "2.2.x",
         "rollup-plugin-commonjs": "10.1.x",
         "rollup-plugin-istanbul": "^2.0.1",
         "rollup-plugin-json": "4.x.x",
@@ -106,7 +106,7 @@
         "istanbul": "^0.4.5",
         "istanbul-reporter-shield-badge": "^1.2.0",
         "jsdoc": "^3.6.3",
-        "karma": "4.3.x",
+        "karma": "4.4.x",
         "karma-chrome-launcher": "3.1.x",
         "karma-coverage": "^1.1.2",
         "karma-firefox-launcher": "1.2.x",
