added: support for default drawings, closes #125

--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
         "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "github:enketo/enketo-core#b4a603a7",
-        "enketo-transformer": "1.35.0",
+        "enketo-core": "5.10.0",
+        "enketo-transformer": "1.36.0",
         "express": "4.x.x",
         "grunt": "^1.0.3",
         "grunt-env": "1.0.x",
