added: support for dynamic defaults, fixed: absolute paths inside repeats now always correctly evaluated according to XForms 1.0 (requires pyxform 1.0+)

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.82.0",
+    "version": "1.83.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -44,8 +44,8 @@
         "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "5.10.0",
-        "enketo-transformer": "1.36.0",
+        "enketo-core": "5.11.0",
+        "enketo-transformer": "1.37.0",
         "express": "4.x.x",
         "grunt": "^1.0.3",
         "grunt-env": "1.0.x",
@@ -73,7 +73,7 @@
         "puppeteer": "^1.2.0",
         "redis": "2.8.0",
         "request": "2.88.x",
-        "rollup": "1.25.x",
+        "rollup": "1.27.x",
         "rollup-plugin-alias": "2.2.x",
         "rollup-plugin-commonjs": "10.1.x",
         "rollup-plugin-istanbul": "^2.0.1",
@@ -92,7 +92,7 @@
         "chai": "4.2.x",
         "chai-as-promised": "*",
         "docdash": "^1.1.1",
-        "eslint-plugin-jsdoc": "^15.8.0",
+        "eslint-plugin-jsdoc": "19.2.x",
         "grunt-concurrent": "3.x.x",
         "grunt-contrib-watch": "1.1.x",
         "grunt-eslint": "22.x.x",
