fixed: broken annotation widget

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.83.0",
+    "version": "1.83.1",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -28,10 +28,10 @@
     "private": true,
     "license": "Apache-2.0",
     "dependencies": {
-        "@babel/cli": "^7.1.2",
-        "@babel/core": "^7.1.2",
-        "@babel/polyfill": "^7.0.0",
-        "@babel/preset-env": "^7.1.0",
+        "@babel/cli": "^7.7.7",
+        "@babel/core": "^7.7.7",
+        "@babel/polyfill": "^7.7.0",
+        "@babel/preset-env": "^7.7.7",
         "aliasify": "2.1.x",
         "babelify": "^10.0.0",
         "basic-auth": "2.0.x",
@@ -40,37 +40,37 @@
         "busboy": "0.3.x",
         "compression": "1.x.x",
         "cookie-parser": "1.4.x",
-        "core-js": "^3.2.1",
+        "core-js": "^3.6.2",
         "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "github:enketo/enketo-core#a30cec95",
+        "enketo-core": "5.11.1",
         "enketo-transformer": "1.37.0",
-        "express": "4.x.x",
+        "express": "^4.17.1",
         "grunt": "^1.0.3",
         "grunt-env": "1.0.x",
         "grunt-i18next": "0.2.x",
         "grunt-sass": "3.1.x",
         "grunt-shell-spawn": "0.4.x",
         "grunt-terser": "1.0.x",
-        "i18next": "17.3.x",
-        "i18next-browser-languagedetector": "4.0.x",
-        "i18next-express-middleware": "^1.0.9",
+        "i18next": "^17.3.1",
+        "i18next-browser-languagedetector": "^4.0.1",
+        "i18next-express-middleware": "^1.9.1",
         "i18next-node-fs-backend": "2.1.x",
-        "i18next-xhr-backend": "3.2.x",
+        "i18next-xhr-backend": "^3.2.2",
         "jquery": "^3.4.1",
         "jstransformer-markdown-it": "^2.1.0",
-        "jszip": "^3.1.5",
+        "jszip": "^3.2.2",
         "jwt-simple": "0.5.x",
         "libxslt": "0.6.5",
-        "load-grunt-tasks": "5.x.x",
+        "load-grunt-tasks": "^5.1.0",
         "lodash": "^4.17.15",
         "morgan": "1.x.x",
         "node-forge": "^0.7.6",
         "node-sass": "^4.13.0",
         "papaparse": "4.6.x",
         "pug": "2.0.4",
-        "puppeteer": "^1.2.0",
+        "puppeteer": "^1.20.0",
         "redis": "2.8.0",
         "request": "2.88.x",
         "rollup": "1.27.x",
@@ -84,9 +84,9 @@
         "serve-favicon": "2.x.x",
         "time-grunt": "2.x.x",
         "valid-url": "^1.0.9",
-        "vex-dialog-enketo": "github:enketo/vex-dialog.git#b6e0f01",
+        "vex-dialog-enketo": "github:enketo/vex-dialog#b6e0f01",
         "vex-js": "4.1.x",
-        "xml2js": "0.4.x"
+        "xml2js": "^0.4.23"
     },
     "devDependencies": {
         "chai": "4.2.x",
@@ -100,11 +100,11 @@
         "grunt-karma": "3.0.x",
         "grunt-mocha-test": "0.13.x",
         "grunt-nodemon": "0.4.x",
-        "grunt-simple-nyc": "^3.0.0",
+        "grunt-simple-nyc": "^3.0.1",
         "gulp": "4.0.x",
         "i18next-parser": "0.13.0",
         "istanbul": "^0.4.5",
-        "istanbul-reporter-shield-badge": "^1.2.0",
+        "istanbul-reporter-shield-badge": "^1.2.1",
         "jsdoc": "^3.6.3",
         "karma": "4.4.x",
         "karma-chrome-launcher": "3.1.x",
@@ -112,11 +112,11 @@
         "karma-firefox-launcher": "1.2.x",
         "karma-mocha": "1.3.x",
         "karma-opera-launcher": "1.0.x",
-        "karma-rollup-preprocessor": "7.x.x",
+        "karma-rollup-preprocessor": "^7.0.2",
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "2.0.x",
-        "mocha": "6.2.x",
-        "nock": "^11.3.4",
+        "mocha": "^6.2.2",
+        "nock": "^11.7.1",
         "rimraf": "^3.0.0",
         "sinon": "7.5.x",
         "sinon-chai": "3.3.x",
