changed: made PDF timeout configurable and fixed incorrect error code returned by PDF endpoint

--- a/config/default-config.json
+++ b/config/default-config.json
@@ -45,6 +45,9 @@
             "site id": ""
         }
     },
+    "headless": {
+        "timeout": 60000
+    },
     "maps": [ {
         "name": "streets",
         "tiles": [ "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png" ],
