changed: updated dependencies and version fixed: rows are not always stretching correctly when printing Grid Theme forms

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "enketo-express",
     "description": "Webforms evolved.",
     "homepage": "https://enketo.org",
-    "version": "1.83.5",
+    "version": "1.84.0",
     "main": "./app.js",
     "engines": {
         "node": "4.4.x",
@@ -28,10 +28,10 @@
     "private": true,
     "license": "Apache-2.0",
     "dependencies": {
-        "@babel/cli": "^7.7.7",
-        "@babel/core": "^7.7.7",
-        "@babel/polyfill": "^7.7.0",
-        "@babel/preset-env": "^7.7.7",
+        "@babel/cli": "^7.8.3",
+        "@babel/core": "^7.8.3",
+        "@babel/polyfill": "^7.8.3",
+        "@babel/preset-env": "^7.8.3",
         "aliasify": "2.1.x",
         "babelify": "^10.0.0",
         "basic-auth": "2.0.x",
@@ -40,11 +40,11 @@
         "busboy": "0.3.x",
         "compression": "1.x.x",
         "cookie-parser": "1.4.x",
-        "core-js": "^3.6.2",
+        "core-js": "^3.6.4",
         "csurf": "1.10.x",
         "db.js": "0.15.0",
         "debug": "4.1.x",
-        "enketo-core": "github:enketo/enketo-core#97e5219f",
+        "enketo-core": "5.11.7",
         "enketo-transformer": "1.37.0",
         "express": "^4.17.1",
         "grunt": "^1.0.3",
@@ -67,7 +67,7 @@
         "lodash": "^4.17.15",
         "morgan": "1.x.x",
         "node-forge": "^0.7.6",
-        "node-sass": "^4.13.0",
+        "node-sass": "^4.13.1",
         "papaparse": "4.6.x",
         "pug": "2.0.4",
         "puppeteer": "^1.20.0",
@@ -91,7 +91,7 @@
     "devDependencies": {
         "chai": "4.2.x",
         "chai-as-promised": "*",
-        "docdash": "^1.1.1",
+        "docdash": "^1.2.0",
         "eslint-plugin-jsdoc": "19.2.x",
         "grunt-concurrent": "3.x.x",
         "grunt-contrib-watch": "1.1.x",
@@ -112,12 +112,12 @@
         "karma-firefox-launcher": "1.2.x",
         "karma-mocha": "1.3.x",
         "karma-opera-launcher": "1.0.x",
-        "karma-rollup-preprocessor": "^7.0.2",
+        "karma-rollup-preprocessor": "^7.0.3",
         "karma-safari-launcher": "1.0.x",
         "karma-sinon-chai": "2.0.x",
         "mocha": "^6.2.2",
-        "nock": "^11.7.1",
-        "rimraf": "^3.0.0",
+        "nock": "^11.7.2",
+        "rimraf": "^3.0.1",
         "sinon": "7.5.x",
         "sinon-chai": "3.3.x",
         "supertest": "4.0.x"
